Added about me information header2
Added header to "About Me" information section.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Welcome to My First Website</h1>
     <p>A website by Jonathan A. Zehner</p>
+    <h2>About Me</h2>
 
   </body>
 </html>
