About Me Information entered birth city
Added birth city to about me section.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Welcome to My First Website</h1>
     <p>A website by Jonathan A. Zehner</p>
     <h2>About Me</h2>
+    <p>I was born in Orange Park, Fl</p>
 
   </body>
 </html>
