Added about me information
Added about me information with two sentences.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>A website by Jonathan A. Zehner</p>
     <h2>About Me</h2>
     <p>I was born in Orange Park, Fl</p>
+    <p>I've traveled the world with the Marine Corps for the past 20 years and am getting ready to retire after 20 years of service.  In my free time, I love working on and restoring my and my dad's 2006 Jeep Commander Limited.</p>
 
   </body>
 </html>
